--- a/config/cloud-config.yml
+++ b/config/cloud-config.yml
@@ -25,8 +25,9 @@ networks:
     dns:
     - 61.88.88.88
     gateway: 10.244.0.1
-    range: 10.244.0.0/24
-    reserved: [10.244.0.100-10.244.0.150]
+    range: 10.244.0.0/16
+    reserved: [10.244.0.1-10.244.0.10]
+    static: [10.244.0.11-10.244.0.30]
   type: manual
 vm_types:
 - cloud_properties:
