--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,7 @@ internal_cidr: 192.168.50.0/24
 outbound_network_name: NatNetwork
 network_type: nat
 network_device: eno1
+
+director_vm_cpus: 2
+director_vm_ram_bytes: 8192
+director_vm_ephemeral_disk_megabytes: 10240
